--- a/tests/Conways.GameOfLife.IntegrationTests/Conways.GameOfLife.IntegrationTests.csproj
+++ b/tests/Conways.GameOfLife.IntegrationTests/Conways.GameOfLife.IntegrationTests.csproj
@@ -23,7 +23,9 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.9.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
           <PrivateAssets>all</PrivateAssets>
@@ -36,7 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Conways.GameOfLife.Domain\Conways.GameOfLife.Domain.csproj" />
+      <ProjectReference Include="..\..\src\Conways.GameOfLife.API\Conways.GameOfLife.API.csproj" />
     </ItemGroup>
 
 </Project>
