feat: add upload board feature

--- a/src/Conways.GameOfLife.API/appsettings.Development.json
+++ b/src/Conways.GameOfLife.API/appsettings.Development.json
@@ -6,6 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "BoardDbContext": "Host=localhost;Port=5432;Username=postgres;Password=p4ssw0rd;Database=ConwaysGameOfLive;"
+    "BoardDbContext": "Host=localhost;Port=5432;Username=postgres;Password=p4ssw0rd;Database=ConwaysGameOfLife;"
+  },
+  "PostgresSettings": {
+    "RetryCount": 3
+  },
+  "HashIds": {
+    "Salt": "ThisIsAV3ryLongS4ltToG3nerAt3Th3h4shIdz",
+    "MinHashLength": 11
   }
 }
