--- a/src/Conways.GameOfLife.Infrastructure.PostgresSQL/Conways.GameOfLife.Infrastructure.PostgresSQL.csproj
+++ b/src/Conways.GameOfLife.Infrastructure.PostgresSQL/Conways.GameOfLife.Infrastructure.PostgresSQL.csproj
@@ -9,19 +9,14 @@
 
     <ItemGroup>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Conways.GameOfLife.Domain\Conways.GameOfLife.Domain.csproj" />
       <ProjectReference Include="..\Conways.GameOfLife.Infrastructure\Conways.GameOfLife.Infrastructure.csproj" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Configuration">
-        <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\8.0.5\Microsoft.Extensions.Configuration.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
+    
     <ItemGroup>
       <Folder Include="Migrations\" />
     </ItemGroup>
