chore: add fallback max attempts to IConfiguration

--- a/src/Conways.GameOfLife.API/appsettings.Development.json
+++ b/src/Conways.GameOfLife.API/appsettings.Development.json
@@ -14,5 +14,8 @@
   "HashIds": {
     "Salt": "ThisIsAV3ryLongS4ltToG3nerAt3Th3h4shIdz",
     "MinHashLength": 11
+  },
+  "Board": {
+    "MaxAttempts": 5
   }
 }
