--- a/.github/workflows/sonar_pull_request.yml
+++ b/.github/workflows/sonar_pull_request.yml
@@ -3,9 +3,7 @@ name: Conway's Game of Life - PullRequest
 on: 
   pull_request:
     types: [opened, synchronize, reopened]
-  push:
-    branches: [main]
-    
+  
 jobs:
   test:
     name: Run SonarCloud Analysis
@@ -61,7 +59,7 @@ jobs:
       
       - name: .NET Build
         shell: bash
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore --configuration Release
                 
       - name: .NET Test
         shell: bash
@@ -72,6 +70,7 @@ jobs:
           --collect "XPlat CodeCoverage" \
           --results-directory $COVERAGE_REPORTS_DIR \
           --logger "GitHubActions;report-warnings=false" \
+          --configuration Release \
           --verbosity m -- \
           DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover \
           DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.ExcludeByAttribute=CompilerGeneratedAttribute
@@ -80,4 +79,4 @@ jobs:
         shell: bash
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: $HOME/sonar-scanner/dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
+        run: dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
