chore: add environment variables for OTEL

--- a/src/Conways.GameOfLife.API/Properties/launchSettings.json
+++ b/src/Conways.GameOfLife.API/Properties/launchSettings.json
@@ -16,7 +16,12 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5224",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SERVICE_NAME": "conways-game-of-life-api",
+        "SERVICE_NAMESPACE": "conways-game-of-life",
+        "SERVICE_VERSION": "1.0.0",
+        "AUTOGENERATE_SERVICE_INSTANCE_ID": true,
+        "EXPORTER_ENDPOINT": "http://localhost:4317"
       }
     },
     "https": {
@@ -26,7 +31,12 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7203;http://localhost:5224",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SERVICE_NAME": "conways-game-of-life-api",
+        "SERVICE_NAMESPACE": "conways-game-of-life",
+        "SERVICE_VERSION": "1.0.0",
+        "AUTOGENERATE_SERVICE_INSTANCE_ID": true,
+        "EXPORTER_ENDPOINT": "http://localhost:4317"
       }
     },
     "IIS Express": {
