--- a/otel-collector-config.yml
+++ b/otel-collector-config.yml
@@ -18,10 +18,24 @@ processors:
         - 'attributes["url.path"] == "/swagger/swagger-ui-standalone-preset.js"'
         - 'attributes["url.path"] == "/swagger/swagger-ui-bundle.js"'
         - 'attributes["url.path"] == "/swagger/swagger-ui.css"'
+  attributes:
+    actions:
+      - action: insert
+        key: loki.attribute.labels
+        value: event.domain
+  resource:
+    attributes:
+      - action: insert
+        key: loki.resource.labels
+        value: service.name, service.namespace
 
 exporters:
   otlp:
     endpoint: jaeger:4317
+    tls:
+      insecure: true
+  loki:
+    endpoint: http://loki:3100/loki/api/v1/push
     tls:
       insecure: true
 
@@ -31,3 +45,7 @@ service:
       receivers: [otlp]
       processors: [batch, filter]
       exporters: [otlp]
+    logs:
+      receivers: [otlp]
+      processors: [attributes, resource]
+      exporters: [loki]
