--- a/otel-collector-config.yml
+++ b/otel-collector-config.yml
@@ -34,6 +34,8 @@ exporters:
     endpoint: jaeger:4317
     tls:
       insecure: true
+  prometheus:
+    endpoint: "0.0.0.0:8889"
   loki:
     endpoint: http://loki:3100/loki/api/v1/push
     tls:
@@ -42,10 +44,14 @@ exporters:
 service:
   pipelines:
     traces:
-      receivers: [otlp]
-      processors: [batch, filter]
-      exporters: [otlp]
+      receivers: [ otlp ]
+      processors: [ batch, filter ]
+      exporters: [ otlp ]
+    metrics:
+      receivers: [ otlp ]
+      processors: [ batch ]
+      exporters: [ prometheus ]
     logs:
-      receivers: [otlp]
-      processors: [attributes, resource]
-      exporters: [loki]
+      receivers: [ otlp ]
+      processors: [ attributes, resource ]
+      exporters: [ loki ]
