--- a/.github/workflows/sonar_push.yml
+++ b/.github/workflows/sonar_push.yml
@@ -29,6 +29,13 @@ jobs:
         shell: bash
         run: dotnet tool install --global dotnet-sonarscanner
 
+      - name: Install dotCover
+        shell: bash
+        env:
+          DOT_COVER_VERSION: 2024.2.3
+        run: |
+          dotnet tool install --global JetBrains.dotCover.CommandLineTools --version $DOT_COVER_VERSION
+
       - name: Begin SonarCloud Analysis
         shell: bash
         env:
@@ -47,7 +54,8 @@ jobs:
           /d:sonar.token="$SONAR_TOKEN" \
           /d:sonar.host.url="$SONAR_HOST_URL" \
           /d:sonar.qualitygate.wait=$QUALITY_GATE_WAIT \
-          /d:sonar.cs.opencover.reportsPaths="$COVERAGE_REPORTS_DIR/**/*.opencover.xml"
+          /d:sonar.cs.dotcover.reportsPaths="$COVERAGE_REPORTS_DIR/*.dotcover.html" \
+          /d:sonar.exclusions="$COVERAGE_REPORTS_DIR/**,**/*.css,**/*.html,**/*.js,**/Program.cs,**/Diagnostics/*,**/Extensions/*,**/Migrations/*,**/Interceptors/*,**/Factories/*,**/BoardDesignTimeDbContextFactory.cs"
 
       - name: .NET Restore
         shell: bash
@@ -62,14 +70,17 @@ jobs:
         env:
           COVERAGE_REPORTS_DIR: ${{ github.workspace }}/reports
         run: |
-          dotnet test --no-restore --no-build \
-          --collect "XPlat Code Coverage" \
-          --results-directory $COVERAGE_REPORTS_DIR \
-          --logger "GitHubActions;report-warnings=false" \
-          --configuration Release \
-          --verbosity m -- \
-          DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover \
-          DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.ExcludeByAttribute=CompilerGeneratedAttribute
+          dotnet dotCover cover-dotnet \
+            --ReportType=HTML \
+            --Output="$COVERAGE_REPORTS_DIR/coverage.dotcover.html" \
+            --Filters="-:module=*Tests;+:class=Conways.GameOfLife.*" -- \
+          test \
+            --no-restore \
+            --no-build \
+            ConwaysGameOfLife.sln \
+            --logger "GitHubActions;report-warnings=false" \
+            --configuration Release \
+            --verbosity m
 
       - name: End SonarCloud Analysis
         shell: bash
