--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,26 +20,13 @@ services:
       - "14268:14268"
       - "14250:14250"
       - "6831:6831/udp"
-
-  loki:
-    container_name: loki
-    image: grafana/loki:latest
-    command: ["-config.file=/etc/loki/local-config.yaml"]
+  seq:
+    container_name: seq
+    image: datalust/seq:latest
     ports:
-      - "3100:3100"
-
-  grafana:
-    container_name: grafana
-    image: grafana/grafana
+      - "5431:80"
     environment:
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_BASIC_ENABLED=false
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ACCEPT_EULA=Y
   
   prometheus:
     container_name: prometheus
@@ -51,7 +38,7 @@ services:
   
   collector:
     container_name: collector
-    image: otel/opentelemetry-collector-contrib:0.103.1
+    image: otel/opentelemetry-collector-contrib:0.108.0
     command: ["--config=/etc/otel-collector-config.yml"]
     ports:
       - "4317:4317"
@@ -64,14 +51,10 @@ services:
       - ./otel-collector-config.yml:/etc/otel-collector-config.yml
     depends_on:
       - jaeger
-      - loki
-      - grafana
+      - seq
       - prometheus
 
 volumes:
   postgres_data:
     name: postgres_data
-    external: false
-  grafana_data:
-    name: grafana_data
     external: false
