--- a/src/Conways.GameOfLife.API/Properties/launchSettings.json
+++ b/src/Conways.GameOfLife.API/Properties/launchSettings.json
@@ -20,8 +20,9 @@
         "SERVICE_NAME": "conways-game-of-life-api",
         "SERVICE_NAMESPACE": "conways-game-of-life",
         "SERVICE_VERSION": "1.0.0",
-        "AUTOGENERATE_SERVICE_INSTANCE_ID": true,
-        "EXPORTER_ENDPOINT": "http://localhost:4317"
+        "AUTOGENERATE_SERVICE_INSTANCE_ID": "true",
+        "EXPORTER_ENDPOINT": "http://localhost:4317",
+        "SEQ_ENDPOINT": "http://localhost:5431/ingest/otlp/v1/logs"
       }
     },
     "https": {
@@ -35,8 +36,8 @@
         "SERVICE_NAME": "conways-game-of-life-api",
         "SERVICE_NAMESPACE": "conways-game-of-life",
         "SERVICE_VERSION": "1.0.0",
-        "AUTOGENERATE_SERVICE_INSTANCE_ID": true,
-        "EXPORTER_ENDPOINT": "http://localhost:4317"
+        "EXPORTER_ENDPOINT": "http://localhost:4317",
+        "SEQ_ENDPOINT": "http://localhost:5431/ingest/otlp/v1/logs"
       }
     },
     "IIS Express": {
